@@ -25,6 +25,7 @@
 #include "config.h"
 #include "Idle.hxx"
 #include "GlobalEvents.hxx"
+#include "util/ASCII.hxx"
 
 #include <atomic>
 
@@ -69,4 +70,16 @@ const char*const*
 idle_get_names(void)
 {
         return idle_names;
+}
+
+unsigned
+idle_parse_name(const char *name)
+{
+	assert(name != nullptr);
+
+	for (unsigned i = 0; idle_names[i] != nullptr; ++i)
+		if (StringEqualsCaseASCII(name, idle_names[i]))
+			return 1 << i;
+
+	return 0;
 }
